# pizza-party

./: .flake8  .gitignore  README.md  pyproject.toml
src/: app.py  cli.py  mixins.py  pizza.py
tests/: test_app_pytest.py  test_cli_pytest.py  test_mixins_pytest.py  test_pizza_pytest.py
