[tool.poetry]
name = "pizza-party"
version = "0.1.0"
description = "Pizza order shop"
authors = []
readme = "README.md"
packages = [{include = "pizza_party", from = "./src"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.982"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
